@@ -1,0 +1,50 @@
+=== Opus Primus Taglines readme.txt ===
+* Last revised March 29, 2013
+
+== Contents ==
+* Copyright and License
+* Basic FAQ
+* Notes
+
+== Copyright ==
+Copyright (c) 2012-2013, Opus Primus
+
+This file is part of the Opus Primus THA Stanza, a part of Opus Primus.
+
+Opus Primus THA is free software; you can redistribute it and/or modify it under
+the terms of the GNU General Public License version 2, as published by the Free
+Software Foundation.
+
+You may NOT assume that you can use any other version of the GPL.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+this program; if not, write to:
+
+    Free Software Foundation, Inc.
+    51 Franklin St, Fifth Floor
+    Boston, MA  02110-1301  USA
+
+The license for this software can also likely be found here:
+http://www.gnu.org/licenses/gpl-2.0.html
+
+Note: Opus Primus file Copyright years start with the first year of use and are
+amended with subsequent years based on file modification as the case may be.
+
+== Basic FAQ ==
+Q: Who wrote the Opus Primus THA Stanza?
+The THA Stanza was written by the Opus Primus lead developer, Cais aka
+Edward Caissie. Visit his website at http://edwardcaissie.com
+
+Q: How does the Opus Primus THA Stanza work?
+The Opus Primus THA Stanza provides support for the Theme Hook Alliance ideals
+by bridging the THA hooks to appropriate Opus Primus Hooks. This allows for
+other works implementing the THA ideals to be directly compatible with the Opus
+Primus hooks as they relate to the THA hooks.
+
+== Notes ==
+* The Opus Primus THA Stanza, although fully functional, is meant as an example
+of how the Opus Primus theme can be extended via Stanzas.
